--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,9 @@
 server:
   port: 8080
+
+spring:
+  datasource:
+    url: jdbc:mysql://172.16.50.220:3306/zglu_sys
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
