--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,6 +37,11 @@ spring:
       mail.smtp.starttls.enable: true
       mail.smtp.starttls.required: true
 
+  rsocket:
+    server:
+      port: 7000
+      transport: tcp
+
 custom:
   mq:
     url: http://1505716954562220.mqrest.cn-qingdao-public.aliyuncs.com
