--- a/th-error/pom.xml
+++ b/th-error/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>error-view</artifactId>
+    <artifactId>th-error</artifactId>
 
     <dependencies>
         <dependency>
