--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -11,6 +11,10 @@
 
     <artifactId>redis</artifactId>
 
+    <properties>
+        <redisson.version>3.11.1</redisson.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -19,6 +23,11 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>${redisson.version}</version>
         </dependency>
     </dependencies>
 </project>
