--- a/api/pom.xml
+++ b/api/pom.xml
@@ -12,11 +12,11 @@
     <artifactId>api</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>com.zglu</groupId>
-            <artifactId>rocket-mq</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.zglu</groupId>-->
+            <!--<artifactId>rocket-mq</artifactId>-->
+            <!--<version>0.0.1-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.zglu</groupId>
             <artifactId>mail</artifactId>
@@ -43,17 +43,31 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!--<dependency>-->
+            <!--<groupId>io.springfox</groupId>-->
+            <!--<artifactId>springfox-swagger2</artifactId>-->
+            <!--<version>2.5.0</version>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>io.springfox</groupId>-->
+            <!--<artifactId>springfox-swagger-ui</artifactId>-->
+            <!--<version>2.5.0</version>-->
+        <!--</dependency>-->
+
+        <!-- swagger -->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.5.0</version>
+            <version>2.9.2</version>
+        </dependency>
+        <!-- SwaggerBootstrapUi -->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+            <version>1.8.8</version>
         </dependency>
 
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.5.0</version>
-        </dependency>
         <!--处理使用2.2.0，swagger报错-->
         <dependency>
             <groupId>org.springframework.plugin</groupId>
