--- a/rocket-mq/src/main/resources/application-mq.yml
+++ b/rocket-mq/src/main/resources/application-mq.yml
@@ -1,7 +1,7 @@
 custom:
   mq:
-    url: http://1505716954562220.mqrest.cn-qingdao-public.aliyuncs.com
-    id: LTAIfcYYTpu5nhlg
-    key: WJpM378JiEfyQOJ98rc4OHKnvwFLpE
-    topic: JIUXIAOER-DEFAULT-DEV
-    groupId: GID_JIUXIAOER_DEFAULT_DEV
+    url: http://xxxxxxxxxxxx.xxxxxx.cn-xxxxx-xxxxx.aliyuncs.com
+    id: axxxxxxxxxxxxx
+    key: cdfxxxxxxxxxxxxxxxxxxxxxx
+    topic: JXXXXXEEEEERRRRR-FFFEEEEE-DEV
+    groupId: GXXXXX_FEESSSSS_XXXXXXXXXX_DEV
