--- a/api/pom.xml
+++ b/api/pom.xml
@@ -19,6 +19,11 @@
         <!--</dependency>-->
         <dependency>
             <groupId>com.zglu</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zglu</groupId>
             <artifactId>mail</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
@@ -35,6 +40,11 @@
         <dependency>
             <groupId>com.zglu</groupId>
             <artifactId>redis</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zglu</groupId>
+            <artifactId>mongo-dao</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
